--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,10 @@
+:root {
+  --color-highlight: #ffe921;
+  --color-shadow: #eaeaea;
+  --color-text: #fff;
+  --color-background: #000;
+}
+
 html {
   font-size: calc(60% + 0.8vmin);
 }
