--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -25,6 +25,9 @@
   color: var(--color-text-dark);
   text-decoration: none;
   margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo-link {
