--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -8,6 +8,7 @@ input,
 textarea {
   width: 90%;
   margin: auto;
+  color: var(--color-text);
   background-color: var(--color-background-light);
   border: none;
   border-bottom: 1px solid var(--color-text);
